--- a/globo.html
+++ b/globo.html
@@ -102,8 +102,8 @@
     <!-- Elemento de audio -->
     <audio id="explosionSound" src="win.mp3" preload="auto"></audio>
 
-    <img src="tromizq.png" id="trompetaIzquierda" alt="Trompeta Izquierda">
-    <img src="tromder.png" id="trompetaDerecha" alt="Trompeta Derecha">
+    <img src="https://mauricio-mc1.github.io/Win-Lost/tromizq.png" id="trompetaIzquierda" alt="Trompeta Izquierda">
+    <img src="https://mauricio-mc1.github.io/Win-Lost/tromder.png" id="trompetaDerecha" alt="Trompeta Derecha">
 
     <script>
         const canvas = document.getElementById('canvas');
