--- a/globo.html
+++ b/globo.html
@@ -55,7 +55,7 @@
 
         #mensaje {
             display: none;
-            font-size: 60px;
+            font-size: 55px;
             color: #7acb00;
             font-weight: bold;
             position: absolute;
@@ -96,7 +96,7 @@
 </head>
 <body>
     <div id="globo"></div>
-    <div id="mensaje">¡Felicitaciones ve por tu premio!</div>
+    <div id="mensaje">¡Felicitaciones, ve por tu premio!</div>
     <canvas id="canvas"></canvas>
 
     <!-- Elemento de audio -->
